@@ -2,10 +2,12 @@ package com.example.restservice.repository;
 
 import com.example.restservice.DatabaseSingleton;
 import com.example.restservice.model.BattleReport;
+import com.example.restservice.model.Player;
 import org.apache.commons.dbutils.QueryRunner;
 import org.apache.commons.dbutils.ResultSetHandler;
 import org.apache.commons.dbutils.handlers.BeanListHandler;
 
+import java.sql.Connection;
 import java.sql.SQLException;
 import java.util.List;
 
@@ -15,41 +17,115 @@ public class BattleReportRepository {
     private static final DatabaseSingleton db = DatabaseSingleton.getInstance();
 
     public static List<BattleReport> findAll() throws SQLException {
-        QueryRunner queryRunner = new QueryRunner();
-        DatabaseSingleton instanceDatabaseSingleton = DatabaseSingleton.getInstance();
-        ResultSetHandler<List<BattleReport>> resultHandler = new BeanListHandler<>(BattleReport.class);
-        return queryRunner.query(instanceDatabaseSingleton.getConn(),
-                "SELECT * FROM battlereport",
-                resultHandler);
+        return db.withConnection(conn -> {
+            ResultSetHandler<List<BattleReport>> handler = new BeanListHandler<>(BattleReport.class);
+            try {
+                List<BattleReport> reports = queryRunner.query(conn, "SELECT * FROM battlereport", handler);
+
+                // Pour chaque BattleReport, charger ses joueurs
+                for (BattleReport report : reports) {
+                    List<Player> players = PlayerRepository.findByBattleReportId(report.getIdBattleReport());
+                    report.setPlayers(players);
+                }
+
+                return reports;
+            } catch (SQLException e) {
+                throw new RuntimeException(e);
+            }
+        });
     }
+
+
     public static BattleReport findById(int id) throws SQLException {
-        ResultSetHandler<List<BattleReport>> resultHandler = new BeanListHandler<>(BattleReport.class);
-        return queryRunner.query(db.getConn(),
-                "SELECT * FROM battlereport WHERE idBattleReport =? ",
-                id,resultHandler).getFirst();
+        return db.withConnection(conn -> {
+            ResultSetHandler<List<BattleReport>> handler = new BeanListHandler<>(BattleReport.class);
+            try {
+                List<BattleReport> reports = queryRunner.query(conn,
+                        "SELECT * FROM battlereport WHERE idBattleReport = ?",
+                        handler,
+                        id);
+
+                if (reports == null || reports.isEmpty()) {
+                    return null;
+                }
+
+                BattleReport report = reports.get(0);
+
+                // Charger les joueurs associés
+                List<Player> players = PlayerRepository.findByBattleReportId(report.getIdBattleReport());
+                System.out.println("DEBUG: Players found for BattleReport " + report.getIdBattleReport() + " -> " + players.size());
+
+                report.setPlayers(players);
+                return report;
+
+            } catch (SQLException e) {
+                throw new RuntimeException(e);
+            }
+        });
     }
 
     public static int create(BattleReport battleReport) throws SQLException {
-        String sql = "INSERT INTO battleReport (nameBattleReport, descriptionBattleReport, battleReportPhoto_idBattleReportPhoto, scenario_idScenario) VALUES (?, ?, ?, ?)";
-        return queryRunner.update(db.getConn(), sql,
-                battleReport.getNameBattleReport(),
-                battleReport.getDescriptionBattleReport(),
-                battleReport.getBattleReportPhoto_idBattleReportPhoto(),
-                battleReport.getScenario_idScenario()
-        );
+        String sql = "INSERT INTO battlereport (nameBattleReport, descriptionBattleReport, battleReportPhoto_idBattleReportPhoto, scenario_idScenario, armyPoints) VALUES (?, ?, ?, ?, ?)";
+
+        return db.withConnection(conn -> {
+            try {
+                int affectedRows = queryRunner.update(conn, sql,
+                        battleReport.getNameBattleReport(),
+                        battleReport.getDescriptionBattleReport(),
+                        battleReport.getBattleReportPhoto_idBattleReportPhoto(),
+                        battleReport.getScenario_idScenario(),
+                        battleReport.getArmyPoints());
+
+                if (affectedRows == 0) {
+                    throw new SQLException("Creating BattleReport failed, no rows affected.");
+                }
+
+                int idBattleReport = queryRunner.query(conn, "SELECT LAST_INSERT_ID()", rs -> {
+                    rs.next();
+                    return rs.getInt(1);
+                });
+
+                if (battleReport.getPlayers() != null) {
+                    for (Player player : battleReport.getPlayers()) {
+                        player.setBattleReport_idBattleReport(idBattleReport);
+                        PlayerRepository.create(player); // Ce repository gère sa propre connexion
+                    }
+                }
+
+                return idBattleReport;
+            } catch (SQLException e) {
+                throw new RuntimeException(e);
+            }
+        });
     }
 
     public static int update(int id, BattleReport battleReport) throws SQLException {
-       String sql = "UPDATE battleReport SET nameBattleReport = ?, descriptionBattleReport = ?, battleReportPhoto_idBattleReportPhoto = ?, scenario_idScenario = ? WHERE idBattleReport = ?";
-       return queryRunner.update(db.getConn(), sql,
-                battleReport.getNameBattleReport(),
-                battleReport.getDescriptionBattleReport(),
-                battleReport.getBattleReportPhoto_idBattleReportPhoto(),
-                battleReport.getScenario_idScenario(),
-                id);
+        String sql = "UPDATE battlereport SET nameBattleReport = ?, descriptionBattleReport = ?, battleReportPhoto_idBattleReportPhoto = ?, scenario_idScenario = ?, armyPoints = ? WHERE idBattleReport = ?";
+        return db.withConnection(conn -> {
+            try {
+                return queryRunner.update(conn, sql,
+                        battleReport.getNameBattleReport(),
+                        battleReport.getDescriptionBattleReport(),
+                        battleReport.getBattleReportPhoto_idBattleReportPhoto(),
+                        battleReport.getScenario_idScenario(),
+                        battleReport.getArmyPoints(),
+                        id);
+            } catch (SQLException e) {
+                throw new RuntimeException(e);
+            }
+        });
     }
 
     public static int delete(int id) throws SQLException {
-        return queryRunner.update(db.getConn(), "DELETE FROM battleReport WHERE idBattleReport = ?", id);
+        // Supprimer d'abord les joueurs liés (PlayerRepository gère sa connexion)
+        PlayerRepository.deleteByBattleReportId(id);
+
+        return db.withConnection(conn -> {
+            try {
+                return queryRunner.update(conn, "DELETE FROM battlereport WHERE idBattleReport = ?", id);
+            } catch (SQLException e) {
+                throw new RuntimeException(e);
+            }
+        });
     }
 }
